CR-2002-04-17-0: Testsuite: fixed tcl error on using help command line parameter
                 Bugfix:    

JG-2002-04-16-0: Enhancem.: In simulation mode (qmaster_param simulate_hosts=1)
                            one qsub call can submit any number of identical 
                            jobs by setting the job context variable 
                            SGE_MULTI_SUBMIT to the number of jobs to be 
                            created.

CR-2002-04-12-1: Bugfix:    corrected spelling mistakes

CR-2002-04-11-5: Testsuite: (merge from maintrunc)
                            - only produce warning when re_init core 
                              system resets cluster/schedd configuration
                            - removed DEMO category
                            - new interactive menu points:
                              (23) compile and pre install binaries
                              (24) compile and pre install, then install 
                                   and run not completed tests
                              (25) set testsuite debug level


CR-2002-04-11-3: Testsuite: Merge of CR-2002-04-11-2, CR-2002-04-11-1 and
                            CR-2002-04-11-0 from maintrunc

EB-2002-04-11-0: Bugfix:    Solaris processor sets / Migration script
                            - fix: solaris psets won't be used
                            - fix: checkpointed job migration on bad exit state
                 Issue:     #229, #174
                 Bugtraq:   #4668148
                 Changed:   shepherd

JG-2002-04-11-0: Bugfix:    In simulation mode, job reports were not flushed 
                            at (simulated) job end.

JG-2002-04-08-0  Bugfix:    qrsh -h did debug output (a job object).

CR-2002-04-08-0  Bugfix:    Fixed compiler warning in ptf.c

CR-2002-04-05-0  Testsuite: Merges from maintrunc

JG-2002-04-05-0  Testsuite: large_cluster_test: Do not use the qmaster host
                            as exec host for simulation of hosts.
