@@ -232,9 +232,9 @@ void write_exit_code_to_qrsh(int exit_code)
          exit_code = 1;
          
          tmpdir = getenv("TMPDIR");
-         taskid = getenv("TASK_ID");
+         taskid = search_conf_val("qrsh_task_id");
          SHEPHERD_TRACE((err_str, "write_exit_code_to_qrsh - TMPDIR = "
-            "%s, TASK_ID = %s", tmpdir ? tmpdir : "0", 
+            "%s, qrsh_task_id = %s", tmpdir ? tmpdir : "0", 
             taskid ? taskid : "0"));
          if(tmpdir) {
             if(taskid) {
@@ -302,7 +302,7 @@ int get_exit_code_of_qrsh_starter(void)
       tmpdir = search_conf_val("qrsh_tmpdir");
       taskid = search_conf_val("qrsh_task_id");
       SHEPHERD_TRACE((err_str, "get_exit_code_of_qrsh_starter - TMPDIR = %s,"
-         " TASK_ID = %s", tmpdir ? tmpdir : "0", taskid ? taskid : "0"));
+         " qrsh_task_id = %s", tmpdir ? tmpdir : "0", taskid ? taskid : "0"));
       if(tmpdir) {
          if(taskid) {
             sprintf(buffer, "%s/qrsh_exit_code.%s", tmpdir, taskid);
